--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /log/mongrel_debug
 /public/dispatch.*
 /public/plugin_assets
+/public/images/headerimages*
 /tmp/*
 /tmp/cache/*
 /tmp/sessions/*
@@ -20,3 +21,4 @@
 /tmp/test/*
 /vendor/rails
 *.rbc
+/public/robots.txt
