--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /config/database.yml
 /config/email.yml
 /config/initializers/session_store.rb
+/config/initializers/hoptoad.rb
 /coverage
 /db/*.db
 /db/*.sqlite3
